# tywrap

./: .gitignore  .npmignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  CLAUDE.md  CODE_GENERATION_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE_v0.2.0.md  LIBRARY_INTEGRATION_REPORT.md  LICENSE  PERFORMANCE_OPTIMIZATION_REPORT.md  PR_CONSOLIDATION_PLAN.md  README.md  README_v0.2.0.md  ROADMAP.md  SECURITY.md  SECURITY_GUIDE_v0.2.0.md  VALIDATION_REPORT.md  bunfig.toml  deno.json  eslint.config.js  library_integration_report.json  library_integration_summary.json  package-lock.json  package.json  renovate.json  rollup.config.js  test_library_integration.py  tsconfig.json  tsconfig.tools.json  tsd.json  tywrap.config.json  vitest.config.ts
.github/: dependabot.yml  labeler.yml
.tywrap-cache/: 3554a787d052213b.cache  b3382d6d96e7125a.cache  b93eb636219ae7bb.cache
docs/: check_errors.cjs  codec-envelopes.md  codec-roadmap.md  configuration.md  download_hermes.py  getting-started.md  index.md  perf-baselines.md  release.md  transport-capabilities.md  transport-framing.md  type-mapping-matrix.md
examples/: tywrap.config.json
runtime/: frame_codec.py  python_bridge.py  safe_codec.py  tywrap_bridge_core.py
scripts/: act-matrix.mjs  act.mjs  (+8 more)
tywrap_ir/: README.md  pyproject.toml
tywrap_ir/tests/: test_ir_async_generator_flags.py  test_ir_class_members.py  test_ir_return_honesty.py  test_optimized_ir_options.py  test_optimized_ir_parallel_warnings.py
tywrap_ir/tywrap_ir/: __init__.py  __main__.py  ir.py  optimized_ir.py
(+287 files in other folders)
